# customerized_mpd

./: README.md
XRT/src/CMake/: cpack.cmake  dkms-cmcc.cmake  nativeLnx.cmake
XRT/src/CMake/config/: dkms-cmcc.conf.in  postinst-cmcc.in
XRT/src/runtime_src/core/pcie/tools/cloud-daemon/: CMakeLists.txt
XRT/src/runtime_src/core/pcie/tools/cloud-daemon/cmcc/: CMakeLists.txt  cmcc.cpp  cmcc.h
